fixed layout issues and spelling

--- a/style.css
+++ b/style.css
@@ -92,10 +92,11 @@ article:after {
 }
 
 #about {
-    margin-top: 20rem;
+    margin-top: 5em;
 }
 
 #port {
+    margin-top: 1em;
     display: block;
     text-align: center;
     //color: #37B1CB;
